2002-05-09  Derek Atkins   <derek@ihtfp.com>

	Create a new general_search widget that hooks into the search
	dialog and provides callbacks and signals for object selection.
	This fixes a lot of the nested-gtk_main() problems in the business
	code.  Still more separation to do, but MOST of the main modules
	are changed to use the new interfaces.  This is an interim commit;
	another commit will follow shortly.  The code works now, but
	dialog-order (in particular) will give you compiler warnings.

2002-05-07  David Hampton  <hampton@employees.org>

	Pogma's Mac OS X patches committed.  Added a new directory
	src/lib/libc for library routines not available on Mac OS X.
	Changed all of the module function names required by gnucash
	according to libltdl rules so that they are unique, though they
	all still appear the same to callers of libltdl.

2002-05-06  David Hampton  <hampton@employees.org>

	* src/engine/gnc-pricedb.[ch]:
	* src/engine/gw-engine-spec.scm: Another way to get a price GUID.

	* src/gnome/dialog-price-editor.c: Separate the "edit price
	database" dialog from the "edit a single price" dialog.  Move the
	former functionality into the dialog-price-edit-db.c file.

	* src/gnome/top-level.c:
	* src/gnome-utils/gnc-html.[ch]:
	* src/report/report-system/html-utilities.scm:
	* src/report/report-system/report-system.scm: Add hooks for a new
	type of URL, a gnc-price url.

	* src/report/standard-reports/portfolio.scm: The price of a stock
	is now a hyperlink which brings up an "edit a single price" dialog
	for that stock price.  Added an option for skipping stocks with a
	zero share balance.

	* rpm/gnucash.spec.in: Added more dependency information. Added
	support for building an additional RPM containing only the
	postgres backend files.

	* ChangeLog: Spell check this file.

2002-05-03  David Hampton  <hampton@employees.org>

	* src/gnome/top-level.c:
	* src/app-utils/prefs.scm: Add new preference for the number of
	days to keep old log and xac files.
